# library-desk-sense

./: .gitignore  README.md  requirements.txt
analytics/: db.py  forecast.py  forecast_results.json  quietness_recommendation.json  recommend.py  trends.py  trends_summary.json
bot/: .env.example  bot.py
evaluation/: eval_http_vs_coap.py  evaluation_results.json
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_config.h  hcsr04.c  hcsr04.h  idf_component.yml  main.c  mqtt_ctrl.c  sensors.c  shared.h  telemetry.c  veml7700.c  veml7700.h  wifi.c
grafana/: dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: influxdb.yml
proxy/: .env.example  common.py  config_publisher.py  docker-compose.yml  proxy.py
